style updated title added need to styleize login views

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,12 @@
 @import "materialize";
+
+.small {
+ width: 45vw;
+ height: 20vw;
+ margin: 5px;
+ display: inline-block;
+}
+
+.comics {
+  width: 100vw;
+}
